# nu

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
nu/: log-stimela.txt
nu/apps/: corrupt.py  hello.py  predict.py  solve.py
nu/apps/corrupt_visibilities_app/: Dockerfile  README.md  app.yaml  corrupt.py  log-recipe.corrupt_data.txt  log-recipe.txt  log-stimela.txt  recipe.yaml  stimela.config.deps  stimela.recipe.deps  stimela.stats.full  stimela.stats.summary.txt
nu/cabs/: corrupt.yaml  deconvolve.yaml  hello.yml  predict.yml  simms.yaml  solve.yaml
nu/recipes/: corrupt.yaml  hello.yml
nu/tests/: test_hello.py
nu/tests/Test_MS/test_ascii_1h60.0s.MS/: table.f2
nu/tests/Test_MS/test_ascii_1h60.0s.MS/OBSERVATION/: table.f0
nu/tests/Test_MS/test_ascii_1h60.0s.MS/SOURCE/: table.f0  table.f0i
nu/tests/Test_MS/test_ascii_1h60.0s.MS/SPECTRAL_WINDOW/: table.f0i
nu/tests/Test_MS/test_ascii_1h60.0s_original.MS/: table.f0  table.f3  table.f4  table.f5
nu/tests/Test_MS/test_ascii_1h60.0s_original.MS/ANTENNA/: table.f0
nu/tests/Test_MS/test_ascii_1h60.0s_original.MS/POINTING/: table.f0
nu/tests/Test_MS/test_ascii_1h60.0s_original.MS/SPECTRAL_WINDOW/: table.f0
nu/tests/Test_SKY/: sky_model.txt
recipes/: hello_world.yaml  kubeconfig.yaml
