[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "africalim-nu"
version = "0.1.0"
dynamic = ["version"]
description = "The SelfCal package for the Africalim Workshop 2024 of Group Nu"
authors = [
    { name = "Phillip Badenhorst" }
    { name = "Michael Sarkis" }
    { name = "Athanaseus Javas Ramaila" }
    { name = "Lwandile Gwebushe" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["keyword1", "keyword2"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "stimela>2.0.0",
    "cult-cargo"
]

[project.optional-dependencies]
backend = ["kubernetes"]


